--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,11 @@ jobs:
         run: npm install
 
       - name: Run Jest tests
-        run: npm test
+        env:
+          MONGO_URL: ${{ secrets.MONGO_URL }}
+          PORT: ${{ secrets.PORT }}
+        run: |
+          npx jest
 
       - name: Build Docker image
         run: |
