--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '20.10.0'
 
       - name: Install dependencies
         run: npm install
@@ -26,7 +26,7 @@ jobs:
           MONGO_URL: ${{ secrets.MONGO_URL }}
           PORT: ${{ secrets.PORT }}
         run: |
-          npx jest
+          npm test
 
       - name: Build Docker image
         run: |
