--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
+    "babel-core": "^7.0.0-bridge.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.4"
   }
