--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,13 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: create .env file
+        run: |
+          echo "MONGO_URL=${{ secrets.MONGO_URL }}" > .env
+          echo "PORT=${{ secrets.PORT }}" >> .env
+
       - name: Run Jest tests
         run: |
-          echo "process.env.MONGO_URL"
           npm test       
 
       - name: Build Docker image
