--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,17 @@ jobs:
           echo MONGO_URL=${{ secrets.MONGO_URL }} > .env
           echo PORT=${{ secrets.PORT }} >> .env
 
+      - name: Display .env file content
+        run: |
+          cat .env
+      
+      - name: show str
+        run: ls
+      
+      - name: process env
+        run: echo process.env.MONGO_URL
+        
+
       - name: Run Jest tests
         run: |
           npm test       
