--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
       - name: create .env file
         run: |
           touch .env
-          echo "MONGO_URL=\"afdfasasf\"" > .env
-          echo "PORT=3000">> .env
+          echo "MONGO_URL=\"${{ secrets.MONGO_URL }}\"" > .env
+          echo PORT=${{ secrets.PORT }} >> .env
 
       - name: Display .env file content
         run: |
