--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: create .env file
         run: |
           touch .env
-          echo "MONGO_URL=\"${{ secrets.MONGO_URL }}\"" > .env
+          echo MONGO_URL=${{ secrets.MONGO_URL }} > .env
           echo PORT=${{ secrets.PORT }} >> .env
 
       - name: Display .env file content
